<resources>
    <string name="app_name">Travel Journal</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="about_us">About Us</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="rating">Rating</string>
    <string name="favourite">Favourite</string>
    <string name="add_trip">Add Trip</string>
    <string name="enter_username">Enter username...</string>
    <string name="enter_password">Enter password...</string>
    <string name="log_in">Log in</string>
    <string name="enter_trip_name">Enter trip name...</string>
    <string name="enter_destination">Enter trip destination...</string>
    <string name="enter_rating">Enter rating...</string>
    <string name="enter_image_src">Enter image resource...</string>

</resources>