<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.AddTripActivity"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/enter_trip_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:hint="@string/enter_trip_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_destination"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_trip_name" />

    <EditText
        android:id="@+id/enter_rating"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_destination" />
    <EditText
        android:id="@+id/enter_image_src"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_image_src"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_rating" />

    <Button
        android:id="@+id/add_trip_button"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_image_src"
        android:text="Add trip"
        />
</androidx.constraintlayout.widget.ConstraintLayout>